src/App.scss
*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 15px;
}

:root {
  --color-orange: #d87d4a;
  --color-very-dark: #101010;
  --color-light-gray: #f1f1f1;
  --color-very-light-gray: #fafafa;
  --color-light-orange: #fbaf85;
  --color-white: #ffffff;
  --color-white-opacity-10: rgba(255, 255, 255, 10%);
  --color-black: #000000;
}

body {
  font-family: "Manrope", sans-serif;
  color: var(--color-black);
}

@mixin h1-styles {
  font-size: 3.73rem;
  text-transform: uppercase;
  line-height: 1.03;
  letter-spacing: 0.03em;
}
.h1 {
  @include h1-styles;
}

.h2 {
  font-size: 2.5rem;
  text-transform: uppercase;
  line-height: 1.1;
  letter-spacing: 0.375em;
}

.h3 {
  font-size: 2.13rem;
  line-height: 1.125;
  text-transform: uppercase;
  letter-spacing: 0.035em;
}

.h4 {
  font-size: 1.86rem;
  line-height: 1.35;
  text-transform: uppercase;
  letter-spacing: 1.35em;
}

.h5 {
  font-size: 1.6rem;
  line-height: 1.375;
  text-transform: uppercase;
  letter-spacing: 0.07em;
}

.h6 {
  font-size: 1.2rem;
  line-height: 1.33;
  text-transform: uppercase;
  letter-spacing: 0.07em;
}

.overline,
.subtitle {
  color: var(--color-orange);
}

.overline {
  font-weight: 400;
  font-size: 0.93rem;
  text-transform: uppercase;
  line-height: 1.36;
  letter-spacing: 0.71em;
  display: inline-block;
}

.subtitle,
.button {
  font-weight: bold;
  font-size: 0.86rem;
  text-transform: uppercase;
  line-height: 1.9;
  letter-spacing: 0.07em;
}

.body {
  font-weight: 500;
  line-height: 1.66;
  margin: 0 auto;
}

.button {
  border: none;
  background-color: var(--color-orange);
  color: var(--color-white);
  padding: 1rem 2.13rem;
  cursor: pointer;
  transition: background-color 300ms;
}

.button:hover,
.button:focus-visible {
  background-color: var(--color-light-orange);
}

@media (min-width: 768px) {
  .h3 {
    @include h1-styles;
  }
}

@mixin container {
  width: 87.2%;
  max-width: 74rem;
  margin: 0 auto;
}

@mixin reset-list {
  list-style: none;
  padding-left: 0;
}

.u-container {
  @include container();
}

.u-reset-list {
  @include reset-list();
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
}

@media (min-width: 768px) {
  @mixin container {
    width: 89%;
  }
}

